k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vehiclerental-fe-service
spec:
  selector:
    app: vehiclerental-fe
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
